# triangle

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .prettierignore  .pylint_report.html  Makefile  README.md  code_docs.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.autosummary/: triangle.html  triangle.problem.Point.html  triangle.problem.TriangleProblem.html  triangle.problem.html
.github/workflows/: main.yml
.htmlcov/: d_b111b4ee102bb71d___init___py.html  d_b111b4ee102bb71d__version_py.html  d_b111b4ee102bb71d_problem_py.html  d_ef2e0430e80ea790_test_triangle_py.html  index.html  status.json
.utest_reports/: utest_report.html
_modules/: index.html
_modules/triangle/: problem.html
_sources/: code_docs.rst.txt
_sources/.autosummary/: triangle.problem.Point.rst.txt  triangle.problem.TriangleProblem.rst.txt  triangle.problem.rst.txt  triangle.rst.txt
_static/: documentation_options.js
docs/note/: Makefile  note.tex
docs/sphinx/source/: conf.py  index.rst  install.rst
notebooks/: examples.ipynb  generate_figure.ipynb  visualize_problem.ipynb
triangle/: __init__.py  problem.py
triangle/utest/: test_triangle.py
